manifestos-k8s/flag-service/svc-flag-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flag-service-svc
  namespace: default
spec:
  selector:
    app: flag-service
  ports:
  - name: http
    port: 80
    targetPort: 8002
