manifestos-k8s/flag-service/ingress-flag-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-service-ing
  namespace: flag-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /flag(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: flag-service-svc
              port:
                number: 8002
